--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Ходилка</title>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
       canvas {
         width:100%;
